feat: Make application stable (#3)
* feat: start light client

* chore: remove logs, fetch more info

* chore: remove implements in js and won't implement protocols

* chore: remove polkaj and tuples, and copy to project

* fix hex decoding

* chore: remove unused files

* chore: use bootnodes from chainspec

* chore: stop infinite loop for now

* chore: remove unused sout

* chore: remove sysout

* chore: remove unused dependency

* chore: add debug messages

* chore: remove unused dependency

* chore: remove double line